--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 body {
     padding-top: 5rem;
   }
-  .starter-template {
+  .card {
     padding: 3rem 1.5rem;
     text-align: center;
+  }
+  .row {
+      display: flex;
+      flex-wrap: wrap;
+      
+  }
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
   
   
