--- a/style.css
+++ b/style.css
@@ -1,19 +1,68 @@
+* {
+  border-radius: 0 !important;
+}
+
 body {
-    padding-top: 5rem;
-  }
-  .card {
-    padding: 3rem 1.5rem;
-    text-align: center;
-  }
-  .row {
-      display: flex;
-      flex-wrap: wrap;
-      
-  }
-  img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
+  margin: 0;
+  padding:0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #eaeaea;
   
+}
+
+.navbar a {
+  color:#fff;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  color:steelblue;
+}
+
+ul, li {
+  text-decoration: none;
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+.jumbotron {
+  color: #fff;
+  background: url("images/bg.jpg");
+  background-position: bottom;
+}
+
+p {
+margin: 0;
+padding: 0;
+}
+
+h1, h2, h3 {
+margin: 0;
+padding: 1em 0;
+}
+
+.btn-primary {
+display: inline-block;
+background: #333;
+color: #fff;
+text-decoration: none;
+padding: 1em 2em;
+border: 1px solid #666;
+margin: 0.5em 0;
+}
+
+#huvudKat1 {
+  background: #333;
+}
   
+.contactPage {
+  text-align: center;
+}
+#info {
+  text-align: center;
+}
