--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
   background: #eaeaea;
   
 }
+.fa .fa-shopping-cart cart {
+  float: right;
+}
 
 .navbar a {
   color:#fff;
@@ -16,6 +19,10 @@ body {
 
 a:link {
   text-decoration: none;
+  font-size: 1em;
+}
+.dropdown:hover .dropdown-menu  {
+  display: inline-block;
 }
 
 a:hover {
@@ -32,8 +39,17 @@ img {
 }
 .jumbotron {
   color: #fff;
-  background: url("images/bg.jpg");
-  background-position: bottom;
+  padding-top: 40em;
+  background: 
+  linear-gradient(
+     rgba(0, 0, 0, 0.4),
+     rgba(0, 0, 0, 0.4)
+  ),
+    url(images/bg.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 p {
@@ -41,28 +57,53 @@ margin: 0;
 padding: 0;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
 margin: 0;
-padding: 1em 0;
+padding: 0;
 }
 
-.btn-primary {
-display: inline-block;
+.btn .btn-primary {
+display: block;
 background: #333;
 color: #fff;
 text-decoration: none;
 padding: 1em 2em;
 border: 1px solid #666;
 margin: 0.5em 0;
+
 }
 
 #huvudKat1 {
   background: #333;
 }
-  
+
 .contactPage {
   text-align: center;
 }
+
 #info {
   text-align: center;
 }
+.printKassa {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 10vh;
+}
+.container {
+  text-align: center;
+  height: 720px;
+  position: z-index -1;
+}
+
+.totalAmount {
+  padding: 15px;
+  border: 3px solid black;
+  font-size: 2em;
+
+}
+.actions {
+  padding: 5em;
+  padding-bottom: 3em;
+}
+
